<resources>
    <string name="app_name">Baby Need List</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="for_adding_list_item_please_click">For adding list item please click +</string>
    <string name="plus">+</string>
</resources>
