<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:id="@+id/pop"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="30dp"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pop">

        <EditText
            android:id="@+id/nameFromPop"
            android:layout_width="273dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textSize="@dimen/text_in_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/quantityFromPop"
            android:layout_width="273dp"
            android:layout_height="55dp"
            android:layout_marginTop="92dp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_in_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sizeFromPop"
            android:layout_width="273dp"
            android:layout_height="55dp"
            android:layout_marginTop="172dp"
            android:hint="@string/size"
            android:textSize="@dimen/text_in_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteFromPop"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/note"
            android:maxLength="70"
            android:textSize="@dimen/note"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeFromPop" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/save_cancel"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/save_cancel"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</RelativeLayout>