<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/card_background"
    android:id="@+id/cardview"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_in_card"
            android:id="@+id/name"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="52dp"
            android:text="@string/quantity"
            android:textColor="@color/text"
            android:textSize="@dimen/text_in_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/quantity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="88dp"
            android:text="@string/size"
            android:textColor="@color/text"
            android:textSize="@dimen/text_in_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="136dp"
            android:text="@string/note"
            android:textColor="@color/text"
            android:textSize="@dimen/note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/note"/>

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/card_background"
            android:src="@drawable/baseline_create_white_18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_marginRight="8dp"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/card_background"
            android:src="@drawable/baseline_clear_white_18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.983"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/delete"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
